Available for badges alignment fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -321,7 +321,7 @@ footer h6 {
 	padding-right: 32px;
 	color: #45667B;
 	display: inline-block;
-	border-radius: 6px;
+	border-radius: 8px;
 	font-weight: 600;
 	vertical-align: middle;
 	min-width: 130px;
